<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="10dp"
    android:textSize="20sp"
    android:orientation="vertical"  >

    <Button
        android:id="@+id/activityBtnMain"
        android:layout_width="276dp"
        android:layout_height="wrap_content"
        android:text="@string/activities" />

    <Button
        android:id="@+id/facilityBtnMain"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:text="@string/facilities" />

    <Button
        android:id="@+id/eventBtnMain"
        android:layout_width="277dp"
        android:layout_height="wrap_content"
        android:text="@string/event" />

    <Button
        android:id="@+id/rightNowBtnMain"
        android:layout_width="277dp"
        android:layout_height="wrap_content"
        android:text="@string/r_now" />

    <Button
        android:id="@+id/favoriteBtnMain"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:text="@string/favourites" />

</LinearLayout>